--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -6,13 +6,6 @@ body {
     padding: 0;
 }
 
-.header, .footer {
-    background-color: #2e2e2e;
-    color: white;
-    padding: 20px;
-    text-align: center;
-}
-
 .nav-link {
     color: white;
     margin: 0 15px;
@@ -26,11 +19,18 @@ body {
 
 .map-container {
     display: flex;
-    height: 75vh;
-    width: 100%;
+    justify-content: center;
+    align-items: center;
     position: relative;
     background-color: #2e2e2e;
     box-shadow: 0px 0px 15px 2px #000;
+}
+
+.map{
+    display: flex;
+    flex:  1;
+    padding: 10px;
+    background-color: #2e2e2e;
 }
 
 #details-pays {
@@ -66,3 +66,4 @@ body {
     flex-grow: 1;
     margin: 0;
 }
+
