--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #1e1e1e;
+    background-color: #26232C;
     color: #c7c7c7;
     margin: 0;
     padding: 0;
@@ -19,22 +19,31 @@ body {
 
 .map-container {
     display: flex;
+    width: 98vw;
+    height: 80vh;
+    padding: 10px;
+    padding-bottom: 75px;
+    bottom: 0;
     justify-content: center;
     align-items: center;
-    position: relative;
-    background-color: #2e2e2e;
-    box-shadow: 0px 0px 15px 2px #000;
+    position: absolute;
+    background-color:#26232C;
+    box-shadow: 0px 0px 0px 2px #000;
 }
 
 .map{
-    display: flex;
-    flex:  1;
-    padding: 10px;
-    background-color: #2e2e2e;
+ 
+    width: 100vw;
+    height: 90vh;
+    align-items: center;
+    bottom: 0;
+    background-color: #26232C;
+    justify-content: center;
+    align-items: center;
 }
 
 #details-pays {
-    background-color: #333;
+    background-color: #26232C;
     padding: 5px 5px 5px 15px;
     border-radius: 5px;
     color: #c7c7c7;
@@ -46,7 +55,7 @@ body {
 }
 
 .sidebar {
-    background-color: #2e2e2e;
+    background-color: #26232C;
     padding: 0px 15px 0px 15px;
     width: 25%;
     height: 75vh;
@@ -67,3 +76,28 @@ body {
     margin: 0;
 }
 
+.bottom_darkening{
+    position: sticky;
+    bottom:0;
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    height: 10vh;
+    width: 100vw;
+}
+
+.left_darkening{
+    position: sticky;
+    left:0;
+    bottom: 0;
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    height: 95vh;
+    width: 10vw;
+}
+
+.rigth_darkening{
+    position: sticky;
+    right:0;
+    bottom:0;
+    background: linear-gradient(-90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    height: 95vh;
+    width: 10vw;
+}
