--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -10,13 +10,14 @@ body {
 }
 
 .nav-link {
-    color: white;
+    color: #26232C;
     margin: 0 15px;
     text-decoration: none;
-    font-weight: bold;
+    transition: color 150ms;
 }
 
 .nav-link:hover {
+    color: #E1A014;
     text-decoration: underline;
 }
 
@@ -89,7 +90,7 @@ body {
     left:0;
     bottom: 0;
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    height: 95vh;
+    height: 97vh;
     width: 5vw;
 }
 
@@ -98,10 +99,56 @@ body {
     left: 95vw;
     bottom:0;
     background: linear-gradient(-90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    height: 95vh;
+    height: 97vh;
     width: 5vw;
 }
 
+
 rect {
-    fill: rgba(255, 255, 255, 0) !important/* Make fill transparent */
+    fill: rgba(255, 255, 255, 0) !important/* Make fill transparent*/ 
+}
+
+.header{
+    position:absolute;
+    width: 100vw;
+    height: 3vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #C7C7C7;
+    box-shadow: 0px 0px 15px 5px #000;
+    top:0;
+    z-index: 99;
+}
+
+.navigation{
+    width: 60vw;
+    height: 3vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.kutniti_logo{
+    left:0;
+    display: flex;
+    align-items: center;
+    width: 20vw;
+    height: 3vh;
+}
+
+.social_button{
+    border:none;
+    background-color:transparent;
+}
+
+.social{
+    display: flex;
+    top:0;
+    right: 0;
+    width: 20vw;
+    height: 3vh;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
 }
