--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Oswald", sans-serif;
     background-color: #26232C;
     color: #c7c7c7;
     margin: 0;
